# COMP426

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REPORT.txt
docs/Tutorial 2/: Tutorial_2_SetUp_for_FreeGlut_and_Glew.docx
docs/Tutorial 2/Tutorial_2_OpenGL_Examples/: firstWindow.cpp  triangle.cpp
src/: BallLogic.cl  BallUtils.hpp  CLUtils.hpp  GLUtils.hpp  MathUtils.hpp  main.cpp  main.cu
